maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:4: error: ':' expected but ')' found.
  def avanceVersNord (etat) {
                          ^IslandMaze:49: error: identifier expected but '}' found.
} 
^